updated init_page + favicon

--- a/webapp/template/base.html
+++ b/webapp/template/base.html
@@ -3,6 +3,7 @@
 <!doctype html>
 <html>
 <head>
+	<link rel="shortcut icon" type="image/png" href="{% static '19.logo.ico' %}"/>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
 	rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 	<link rel ="stylesheet" type="text/css" href="{% static 'css/style.css' %}" />
