--- a/webapp/static/css/calendar.css
+++ b/webapp/static/css/calendar.css
@@ -1,20 +1,20 @@
-.cal {
+.calendar {
 	width: 98%;
 	margin: auto;
 	font-size: 13px;
   }
   
-  .cal tr, .cal td {
+  .calendar tr, .calendar td {
 	border: 1px solid black;
   }
   
-  .cal th {
+  .calendar th {
 	padding: 10px;
 	text-align: center;
 	font-size: 18px;
   }
   
-  .cal td {
+  .calendar td {
 	width: 200px;
 	height: 150px;
 	padding: 20px 0px 0px 5px;
