--- a/webapp/template/calendar.html
+++ b/webapp/template/calendar.html
@@ -1,50 +1,70 @@
 <style>
+	.calendar {
+	width: 98%;
+	margin: auto;
+	font-size: 13px;
+  }
+  
+  .calendar tr, .calendar td {
+	border: 1px solid black;
+  }
+  
+  .calendar th {
+	padding: 10px;
+	text-align: center;
+	font-size: 18px;
+  }
+  
+  .calendar td {
+	width: 200px;
+	height: 150px;
+	padding: 20px 0px 0px 5px;
+  }
+  
+  .month {
+	font-size: 25px;
+  }
+  
+  .date {
+	font-size: 16px;
+  }
+  
+  ul {
+	height: 100%;
+	padding: 0px 5px 0px 20px;
+  }
+  
+  a {
+	color: #17a2b8;
+  }
+  .left {
+	float: left;
+  }
 
-	.cal {
-		width: 98%;
-		margin: auto;
-		font-size: 13px;
-	}
-	
-	.cal tr, .cal td {
-		border: 1px solid black;
-	}
-	
-	.cal th {
-		padding: 10px;
-		text-align: center;
-		font-size: 18px;
-	}
-	
-	.cal td {
-		width: 200px;
-		height: 150px;
-		padding: 20px 0px 0px 5px;
-	}
-	
-	.month {
-		font-size: 25px;
-	}
-	
-	.date {
-		font-size: 16px;
-	}
-	
-	ul {
-		height: 100%;
-		padding: 0px 5px 0px 20px;
-	}
-	
-	a {
-		color: #17a2b8;
-	}
-	</style>
+.right {
+	float: right;
+  }
 
-{% extends 'cal_base.html' %}
+.btn {
+	outline: none;
+	color: black;
+	background-color: transparent;
+	box-shadow: 0 0 0 0;
+  }
 
+.clearfix {
+	margin: 15px;
+  }
+</style>
+
+{% extends 'base.html' %}
 {% block content %}
-<br><br><br>
-{{ cal|safe }}
-<br><br><br>
+<br/><br/>
+<div class="clearfix">
+	<a class="btn btn-info left" href="{% url 'pages:calendar' %}?{{ prev_month }}"> Previous Month </a>
+	<a class="btn btn-info right" href="{% url 'pages:calendar' %}?{{ next_month }}"> Next Month </a>
+</div>
+<center>
+	{{ calendar }}
+</center>
 {% endblock %}
-
