--- a/webapp/template/login.html
+++ b/webapp/template/login.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <a href="{% url 'accounts:authenticate' %}">login</a>
+    <a href="{% url 'pages:authenticate' %}">login</a>
 </body>
 
 </html>
