--- a/webapp/template/one_student.html
+++ b/webapp/template/one_student.html
@@ -50,7 +50,7 @@
 			<td>{{ student_bg.caution_paid }}</td>
 			<td>{{ student_bg.caution_returned }}</td>
 			<td>{{ student_bg.lost }}</td>
-			<td align="center"><a href="{% url 'badges:update_student' student_bg.pk %}"
+			<td align="center"><a href="{% url 'pages:update_student' student_bg.pk %}"
 				class="btn btn-outline-secondary btn-sm">Update</a></td>
 		</tr>
 	</table>
