--- a/webapp/template/search_general.html
+++ b/webapp/template/search_general.html
@@ -14,7 +14,7 @@
 		{% endfor %}
 
 		{% for student_bg in student_bgs %}
-			<a href="{% url 'badges:one_student' student_bg.pk%}"><u>{{ student_bg.student.intra_id }}</u></a> - <a href="https://profile.intra.42.fr/users/{{ student.login }}"><u>{{ student_bg.student.login }}</u></a> - {{ student_bg.student.displayname }}<br/>
+			<a href="{% url 'pages:one_student' student_bg.pk%}"><u>{{ student_bg.student.intra_id }}</u></a> - <a href="https://profile.intra.42.fr/users/{{ student.login }}"><u>{{ student_bg.student.login }}</u></a> - {{ student_bg.student.displayname }}<br/>
 
 		{% endfor %}
 		
