--- a/webapp/template/students.html
+++ b/webapp/template/students.html
@@ -24,7 +24,7 @@
 <center>
 	<br/><br/><br/>
 	<div id="students">
-		<a id="students" href="badges:students">Students</a>
+		<a id="students" href="pages:students">Students</a>
 	</div>
 	<br/>
 
