--- a/webapp/template/students_old.html
+++ b/webapp/template/students_old.html
@@ -17,12 +17,12 @@
 			</tr>
 			{% for student in students %}
 			<tr>
-				<td><a class="link_student" href="{% url 'badges:one_student' student.pk %}">{{ student.intra_id }}</a></td>
+				<td><a class="link_student" href="{% url 'pages:one_student' student.pk %}">{{ student.intra_id }}</a></td>
 				<td>{{ student.login }}</td>
 				<td>{{ student.email }}</td>
 				<td>{{ student.displayname }}</td>
 				<td>{{ student.is_staff }}</td>
-				<td align="center"><a href="{% url 'badges:update_student' student.intra_id %}"
+				<td align="center"><a href="{% url 'pages:update_student' student.intra_id %}"
 					class="btn btn-outline-secondary btn-sm">Update</a></td>
 			</tr>
 			{% endfor %}
