--- a/webapp/template/add_event.html
+++ b/webapp/template/add_event.html
@@ -11,7 +11,7 @@
 			
 			{{ form.as_p}}
 			
-			<button name="submit" value="first">Add modes</button>
+			<button name="submit" value="first" class="btn btn-success">Add modes</button>
 		</form>
 
 	</center>
