--- a/webapp/template/students.html
+++ b/webapp/template/students.html
@@ -44,7 +44,7 @@
 			<td>{{ student_bg.student.intra_id }}</td>
 			<td><a href="https://profile.intra.42.fr/users/{{ student_bg.student.login }}"><u>{{ student_bg.student.login }}</u></a></td>
 			<td>{{ student_bg.student.displayname }}</td>
-			<td><a href="{% url 'badges:one_student' student_bg.pk %}">
+			<td><a href="{% url 'pages:one_student' student_bg.pk %}">
 			<u>{{ student_bg.badge.serial }}</u></a></td>
 			<td>{{ student_bg.student.email }}</td>
 			<td>{{ student_bg.student.is_staff }}</td>
