--- a/webapp/template/navbar.html
+++ b/webapp/template/navbar.html
@@ -20,11 +20,11 @@
 		 	 </li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" href="{% url 'pages:events' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-				  Users
+				  Students
 				</a>
 				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<li><a class="dropdown-item" href="{% url 'pages:students' %}">All users</a></li>
-					<li><a class="dropdown-item" href="{% url 'pages:add_student' %}">Add user</a></li>
+					<li><a class="dropdown-item" href="{% url 'pages:students' %}">All students</a></li>
+					<li><a class="dropdown-item" href="{% url 'pages:add_student' %}">Add student</a></li>
 				</ul>
 			</li>
 			<li class="nav-item dropdown">
