--- a/webapp/template/base.html
+++ b/webapp/template/base.html
@@ -11,6 +11,8 @@
 	<link rel ="stylesheet" type="text/css" href="{% static 'css/events.css' %}" />
 	<link rel ="stylesheet" type="text/css" href="{% static 'css/one_event.css' %}" />
 	<link rel ="stylesheet" type="text/css" href="{% static 'css/update_event.css' %}" />
+	<link rel ="stylesheet" type="text/css" href="{% static 'css/update_student.css' %}" />
+	<link rel ="stylesheet" type="text/css" href="{% static 'css/update_studentbadge.css' %}" />
 	<link rel ="stylesheet" type="text/css" href="{% static 'css/scans.css' %}" />
 	<link rel ="stylesheet" type="text/css" href="{% static 'css/calendar.css' %}" />
 	<title> Scanning app </title>
