--- a/webapp/template/update_studentbadge.html
+++ b/webapp/template/update_studentbadge.html
@@ -2,20 +2,19 @@
 
 {% block content %}
 	<center>
-	<br/><br/><br/>
-	<h1>Add a valid login for the user</h1>
-	<br/><br/><br/>
-
+	<div class="update_stud_badge">
+		<h1>Add login of new user</h1>
 		<form action="" method=POST>
 			{% csrf_token %}
 			
-			{{ form.as_p}}
+			{{ form.as_p }}
 			
-			<button name="submit" value="add">submit</button>
+			<button name="submit" value="add" class="btn submit_user_btn">Submit</button>
 			{% if error %}
 				Error : {{ error }}
 				<br/>
 			{% endif %}
 		</form>
+	</div>
 	</center>
 {% endblock %}
