Fix scan page and assigning back uid to scan possible

--- a/webapp/template/navbar.html
+++ b/webapp/template/navbar.html
@@ -40,7 +40,7 @@
 				  <a class="nav-link" href="{% url 'pages:calendar' %}">Calendar</a>
 				</li>
 				<li class="nav-item">
-				  <a class="nav-link" href="{% url 'pages:scan' %}">Scans</a>
+				  <a class="nav-link" href="{% url 'api:scan' %}">Scans</a>
 				</li>
 			</ul>
 			<form class="d-flex" role="search" method="POST" action="{% url 'pages:search_general' %}">
