--- a/webapp/events/templates/events/one_event.html
+++ b/webapp/events/templates/events/one_event.html
@@ -30,8 +30,8 @@
 		</tr>
 		{% endfor %}
 	</table>
-	<td><button class="btn eventbtn"><a id="update_one_event" href="{% url 'events:update_event' event.pk %}"
-		>Update event</a></button></td>
+	<button class="btn eventbtn"><a id="update_one_event" href="{% url 'events:update_event' event.pk %}"
+		>Update event</a></button>
 </div>
 {% endblock %}
 
