--- a/webapp/general/templates/general/navbar.html
+++ b/webapp/general/templates/general/navbar.html
@@ -40,7 +40,7 @@
 				  <a class="nav-link" href="{% url 'general:calendar' %}">Calendar</a>
 				</li>
 				<li class="nav-item">
-				  <a class="nav-link" href="{% url 'api:scan' %}">Scans</a>
+				  <a class="nav-link" href="{% url 'general:scans' %}">Scans</a>
 				</li>
 			</ul>
 			<form class="d-flex" role="search" method="POST" action="{% url 'general:search_general' %}">
