--- a/webapp/general/templates/general/scans.html
+++ b/webapp/general/templates/general/scans.html
@@ -74,7 +74,7 @@
 		cell.innerHTML = '<a href="/update_studentbadge/'+ data.pk +'/" class="btn btn-outline-secondary btn-sm">Update</a>'
 		var cell = row.insertCell();
 		cell.style.textAlign = "center";		
-		cell.innerHTML = '<a href="/delete_studentbadge/'+ data.pk +'/" class="btn btn-outline-danger btn-sm">Delete</a>'
+		cell.innerHTML = '<a href="/delete_scan/'+ data.pk +'/" class="btn btn-outline-danger btn-sm">Delete</a>'
 	};
 
 	chatSocket.onclose = function(e) {
