--- a/webapp/general/templates/general/delete_scan.html
+++ b/webapp/general/templates/general/delete_scan.html
@@ -8,7 +8,7 @@
 		{% csrf_token %}
 		<h1>Are you sure you want to delete <i><u>{{ scan.login}}</u></i> ?</h1><br>
 		<input class="btn btn-danger" type="submit" value="Yes" />
-		<a href="{% url 'api:scan' %}"><div class="btn btn-primary">Cancel</div></a>
+		<a href="{% url 'general:scans' %}"><div class="btn btn-primary">Cancel</div></a>
 	</form>
 </center>
 {% endblock %}
