--- a/webapp/general/templates/general/navbar.html
+++ b/webapp/general/templates/general/navbar.html
@@ -15,25 +15,15 @@
 				<a class="nav-link" href="{% url 'accounts:login' %}">Login</a>
 		  	</li>
 		{% endif %}
-			<li class="nav-item">
+			 <li class="nav-item">
 				<a class="nav-link" href="{% url 'admin:index' %}">Admin</a>
 		 	 </li>
 			  <li class="nav-item">
 				<a class="nav-link" href="{% url 'badges:students' %}">Students</a>
 		 	 </li>
-				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<li><a class="dropdown-item" href="{% url 'badges:students' %}">All students</a></li>
-				</ul>
-			</li>
-			<li class="nav-item dropdown">
-				<a class="nav-link dropdown-toggle" href="{% url 'events:events' %}" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-						Events
-				</a>
-				<ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<li><a class="dropdown-item" href="{% url 'events:events' %}">All events</a></li>
-					<li><a class="dropdown-item" href="{% url 'events:add_event' %}">Add event</a></li>
-				</ul>
-			</li>
+			  <li class="nav-item">
+				<a class="nav-link" href="{% url 'events:events' %}">Events</a>
+		 	 </li>
 				<li class="nav-item">
 				  <a class="nav-link" href="{% url 'general:calendar' %}">Calendar</a>
 				</li>
